5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1723_2506.log
== TEST (2019-05-14 10:20:25) 
-- CODE:
qtt = int(input("Quantidade de tambaqui:"))
pc = int(input("Percentual de crescimento:"))/100
qtv = int(input("Quantidade de tambaqui retirados para venda:"))

ano = 0
soma =  qtt*pc

while(qtt > 0 and qtt < 12000):
	soma = soma + qtt
	soma = soma - qtv
	ano = ano + 1
	if(soma < 0):
		print("EXTINCAO")
	if(soma > 12000):
		print("LIMITE")
-- OUTPUT:
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:20:32) 
-- CODE:
qtt = int(input("Quantidade de tambaqui:"))
pc = int(input("Percentual de crescimento:"))/100
qtv = int(input("Quantidade de tambaqui retirados para venda:"))

ano = 0
soma =  qtt*pc

while(qtt > 0 and qtt < 12000):
	soma = soma + qtt
	soma = soma - qtv
	ano = ano + 1
	print(ano)
	if(soma < 0):
		print("EXTINCAO")
	if(soma > 12000):
		print("LIMITE")
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
LIMITE
12
LIMITE
13
LIMITE
14
LIMITE
15
LIMITE
16
LIMITE
17
LIMITE
18
LIMITE
19
LIMITE
20
LIMITE
21
LIMITE
22
LIMITE
23
LIMITE
24
LIMITE
25
LIMITE
26
LIMITE
27
LIMITE
28
LIMITE
29
LIMITE
30
LIMITE
31
LIMITE
32
LIMITE
33
LIMITE
34
LIMITE
35
LIMITE
36
LIMITE
37
LIMITE
38
LIMITE
39
LIMITE
40
LIMITE
41
LIMITE
42
LIMITE
43
LIMITE
44
LIMITE
45
LIMITE
46
LIMITE
47
LIMITE
48
LIMITE
49
LIMITE
50
LIMITE
51
LIMITE
52
LIMITE
53
LIMITE
54
LIMITE
55
LIMITE
56
LIMITE
57
LIMITE
58
LIMITE
59
LIMITE
60
LIMITE
61
LIMITE
62
LIMITE
63
LIMITE
64
LIMITE
65
LIMITE
66
LIMITE
67
LIMITE
68
LIMITE
69
LIMITE
70
LIMITE
71
LIMITE
72
LIMITE
73
LIMITE
74
LIMITE
75
LIMITE
76
LIMITE
77
LIMITE
78
LIMITE
79
LIMITE
80
LIMITE
81
LIMITE
82
LIMITE
83
LIMITE
84
LIMITE
85
LIMITE
86
LIMITE
87
LIMITE
88
LIMITE
89
LIMITE
90
LIMITE
91
LIMITE
92
LIMITE
93
LIMITE
94
LIMITE
95
LIMITE
96
LIMITE
97
LIMITE
98
LIMITE
99
LIMITE
100
LIMITE
101
LIMITE
102
LIMITE
103
LIMITE
104
LIMITE
105
LIMITE
106
LIMITE
107
LIMITE
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:22:48) 
-- CODE:
qtt = int(input("Quantidade de tambaqui:"))
pc = int(input("Percentual de crescimento:"))/100
qtv = int(input("Quantidade de tambaqui retirados para venda:"))

ano = 0
soma =  qtt*pc

while(soma > 0 and soma < 12000):
	soma = soma + qtt
	soma = soma - qtv
	ano = ano + 1
	print(ano)
	if(soma < 0):
		print("EXTINCAO")
	if(soma > 12000):
		print("LIMITE")
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
LIMITE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:26:11) 
-- CODE:
qtt = int(input("Quantidade de tambaqui:"))
pc = int(input("Percentual de crescimento:"))/100
qtv = int(input("Quantidade de tambaqui retirados para venda:"))

ano = 0
soma = 0

while(soma > 0 and soma < 12000):
	qtt = qtt*pc + qtt
	qtt = qtt - qtv
	ano = ano + 1
print(ano)
	if(soma < 0):
		print("EXTINCAO")
	if(soma > 12000):
		print("LIMITE")
-- ERROR:
File "XXXX", line 13
    if(soma < 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:26:18) 
-- CODE:
qtt = int(input("Quantidade de tambaqui:"))
pc = int(input("Percentual de crescimento:"))/100
qtv = int(input("Quantidade de tambaqui retirados para venda:"))

ano = 0
soma = 0

while(soma > 0 and soma < 12000):
	qtt = qtt*pc + qtt
	qtt = qtt - qtv
	ano = ano + 1
print(ano)
	if(soma < 0):
		print("EXTINCAO")
	if(soma > 12000):
		print("LIMITE")
-- ERROR:
File "XXXX", line 13
    if(soma < 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:26:18) 
-- CODE:
qtt = int(input("Quantidade de tambaqui:"))
pc = int(input("Percentual de crescimento:"))/100
qtv = int(input("Quantidade de tambaqui retirados para venda:"))

ano = 0
soma = 0

while(soma > 0 and soma < 12000):
	qtt = qtt*pc + qtt
	qtt = qtt - qtv
	ano = ano + 1
print(ano)
	if(soma < 0):
		print("EXTINCAO")
	if(soma > 12000):
		print("LIMITE")
-- ERROR:
File "XXXX", line 13
    if(soma < 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:26:18) 
-- CODE:
qtt = int(input("Quantidade de tambaqui:"))
pc = int(input("Percentual de crescimento:"))/100
qtv = int(input("Quantidade de tambaqui retirados para venda:"))

ano = 0
soma = 0

while(soma > 0 and soma < 12000):
	qtt = qtt*pc + qtt
	qtt = qtt - qtv
	ano = ano + 1
print(ano)
	if(soma < 0):
		print("EXTINCAO")
	if(soma > 12000):
		print("LIMITE")
-- ERROR:
File "XXXX", line 13
    if(soma < 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:26:19) 
-- CODE:
qtt = int(input("Quantidade de tambaqui:"))
pc = int(input("Percentual de crescimento:"))/100
qtv = int(input("Quantidade de tambaqui retirados para venda:"))

ano = 0
soma = 0

while(soma > 0 and soma < 12000):
	qtt = qtt*pc + qtt
	qtt = qtt - qtv
	ano = ano + 1
print(ano)
	if(soma < 0):
		print("EXTINCAO")
	if(soma > 12000):
		print("LIMITE")
-- ERROR:
File "XXXX", line 13
    if(soma < 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:26:19) 
-- CODE:
qtt = int(input("Quantidade de tambaqui:"))
pc = int(input("Percentual de crescimento:"))/100
qtv = int(input("Quantidade de tambaqui retirados para venda:"))

ano = 0
soma = 0

while(soma > 0 and soma < 12000):
	qtt = qtt*pc + qtt
	qtt = qtt - qtv
	ano = ano + 1
print(ano)
	if(soma < 0):
		print("EXTINCAO")
	if(soma > 12000):
		print("LIMITE")
-- ERROR:
File "XXXX", line 13
    if(soma < 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:33:29) 
-- CODE:
qtt = int(input("Quantidade de tambaqui:"))
pc = int(input("Percentual de crescimento:"))/100
qtv = int(input("Quantidade de tambaqui retirados para venda:"))

ano = 0
soma = 0

while(soma > 0 and soma < 12000):
	qtt = qtt*pc + qtt
	qtt = qtt - qtv
	ano = ano + 1
print(ano)
	if(soma < 0):
		print("EXTINCAO")
	if(soma > 12000):
		print("LIMITE")
-- ERROR:
File "XXXX", line 13
    if(soma < 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:33:48) 
-- CODE:
qtt = int(input("Quantidade de tambaqui:"))
pc = int(input("Percentual de crescimento:"))/100
qtv = int(input("Quantidade de tambaqui retirados para venda:"))

ano = 0
soma = 0

while(soma > 0 and soma < 12000):
	qtt = qtt*pc + qtt
	qtt = qtt - qtv
	ano = ano + 1
print(ano)
	if(soma < 0):
		print("EXTINCAO")
	if(soma > 12000):
		print("LIMITE")
-- EXECUTION TIME:
0.02578
-- ERROR:
Error response from daemon: Container 82e0b5020aa0b636e7a42d62b9fa17d63471a93d9952552fc063c5abada155fe is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:33:49) 
-- CODE:
qtt = int(input("Quantidade de tambaqui:"))
pc = int(input("Percentual de crescimento:"))/100
qtv = int(input("Quantidade de tambaqui retirados para venda:"))

ano = 0
soma = 0

while(soma > 0 and soma < 12000):
	qtt = qtt*pc + qtt
	qtt = qtt - qtv
	ano = ano + 1
print(ano)
	if(soma < 0):
		print("EXTINCAO")
	if(soma > 12000):
		print("LIMITE")
-- EXECUTION TIME:
0.0340781
-- ERROR:
Error response from daemon: Container 82e0b5020aa0b636e7a42d62b9fa17d63471a93d9952552fc063c5abada155fe is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:33:50) 
-- CODE:
qtt = int(input("Quantidade de tambaqui:"))
pc = int(input("Percentual de crescimento:"))/100
qtv = int(input("Quantidade de tambaqui retirados para venda:"))

ano = 0
soma = 0

while(soma > 0 and soma < 12000):
	qtt = qtt*pc + qtt
	qtt = qtt - qtv
	ano = ano + 1
print(ano)
	if(soma < 0):
		print("EXTINCAO")
	if(soma > 12000):
		print("LIMITE")
-- EXECUTION TIME:
0.0262902
-- ERROR:
Error response from daemon: Container 82e0b5020aa0b636e7a42d62b9fa17d63471a93d9952552fc063c5abada155fe is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:33:57) 
-- CODE:
qtt = int(input("Quantidade de tambaqui:"))
pc = int(input("Percentual de crescimento:"))/100
qtv = int(input("Quantidade de tambaqui retirados para venda:"))

ano = 0
soma = 0

while(soma > 0 and soma < 12000):
	qtt = qtt*pc + qtt
	qtt = qtt - qtv
	ano = ano + 1
print(ano)
	if(soma < 0):
		print("EXTINCAO")
	if(soma > 12000):
		print("LIMITE")
-- ERROR:
File "XXXX", line 13
    if(soma < 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:34:24) 
-- CODE:
qtt = int(input("Quantidade de tambaqui:"))
pc = int(input("Percentual de crescimento:"))/100
qtv = int(input("Quantidade de tambaqui retirados para venda:"))

ano = 0
soma = 0

while(soma > 0 and soma < 12000):
	qtt = qtt*pc + qtt
	qtt = qtt - qtv
	ano = ano + 1
print(ano)
	if(soma < 0):
		print("EXTINCAO")
	if(soma > 12000):
		print("LIMITE")
-- EXECUTION TIME:
0.0348299
-- ERROR:
Error response from daemon: Container 82e0b5020aa0b636e7a42d62b9fa17d63471a93d9952552fc063c5abada155fe is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:34:25) 
-- CODE:
qtt = int(input("Quantidade de tambaqui:"))
pc = int(input("Percentual de crescimento:"))/100
qtv = int(input("Quantidade de tambaqui retirados para venda:"))

ano = 0
soma = 0

while(soma > 0 and soma < 12000):
	qtt = qtt*pc + qtt
	qtt = qtt - qtv
	ano = ano + 1
print(ano)
	if(soma < 0):
		print("EXTINCAO")
	if(soma > 12000):
		print("LIMITE")
-- ERROR:
File "XXXX", line 13
    if(soma < 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:40:39) 
-- CODE:
qtt = int(input("Quantidade de tambaqui:"))
pc = int(input("Percentual de crescimento:"))/100
qtv = int(input("Quantidade de tambaqui retirados para venda:"))

ano = 0
soma = 0

while(soma > 0 and soma < 12000):
	qtt = qtt*pc + qtt
	qtt = qtt - qtv
	ano = ano + 1
print(ano)
	if(soma < 0):
		print("EXTINCAO")
	if(soma > 12000):
		print("LIMITE")
-- ERROR:
File "XXXX", line 13
    if(soma < 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:41:34) 
-- CODE:
qtt = int(input("Quantidade de tambaqui:"))
pc = int(input("Percentual de crescimento:"))/100
qtv = int(input("Quantidade de tambaqui retirados para venda:"))

ano = 0
soma = 0

while(soma > 0 and soma < 12000):
	qtt = qtt*pc + qtt
	qtt = qtt - qtv
	ano = ano + 1
print(ano)
	if(soma < 0):
		print("EXTINCAO")
	if(soma > 12000):
		print("LIMITE")
-- ERROR:
File "XXXX", line 13
    if(soma < 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:44:58) 
-- CODE:
qtt = int(input("Quantidade de tambaqui:"))
pc = int(input("Percentual de crescimento:"))/100
qtv = int(input("Quantidade de tambaqui retirados para venda:"))

ano = 0
soma = 0

while(soma > 0 and soma < 12000):
	qtt = qtt*pc + qtt
	qtt = qtt - qtv
	ano = ano + 1
print(ano)
	if(soma < 0):
		print("EXTINCAO")
	if(soma > 12000):
		print("LIMITE")
-- ERROR:
File "XXXX", line 13
    if(soma < 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:45:13) 
-- CODE:
qtt = int(input("Quantidade de tambaqui:"))
pc = int(input("Percentual de crescimento:"))/100
qtv = int(input("Quantidade de tambaqui retirados para venda:"))

ano = 0
soma = 0

while(soma > 0 and soma < 12000):
	qtt = qtt*pc + qtt
	qtt = qtt - qtv
	ano = ano + 1
	if(soma < 0):
		print("EXTINCAO")
	if(soma > 12000):
		print("LIMITE")
print(ano)
-- ERROR:
File "XXXX", line 13
    if(soma < 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:47:00) 
-- CODE:
qtt = int(input("Quantidade de tambaqui:"))
pc = int(input("Percentual de crescimento:"))/100
qtv = int(input("Quantidade de tambaqui retirados para venda:"))

ano = 0
soma = 0

while(soma > 0 and soma < 12000):
	qtt = qtt*pc + qtt
	qtt = qtt - qtv
	ano = ano + 1
	if(soma < 0):
		print("EXTINCAO")
	if(soma > 12000):
		print("LIMITE")
print(ano)
-- ERROR:
File "XXXX", line 13
    if(soma < 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:47:39) 
-- CODE:
qtt = int(input("Quantidade de tambaqui:"))
pc = int(input("Percentual de crescimento:"))/100
qtv = int(input("Quantidade de tambaqui retirados para venda:"))

ano = 0
soma = 0

while(soma > 0 and soma < 12000):
	qtt = qtt*pc + qtt
	qtt = qtt - qtv
	ano = ano + 1
if(soma < 0):
		print("EXTINCAO")
if(soma > 12000):
		print("LIMITE")
print(ano)
-- ERROR:
File "XXXX", line 13
    if(soma < 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:47:43) 
-- CODE:
qtt = int(input("Quantidade de tambaqui:"))
pc = int(input("Percentual de crescimento:"))/100
qtv = int(input("Quantidade de tambaqui retirados para venda:"))

ano = 0
soma = 0

while(soma > 0 and soma < 12000):
	qtt = qtt*pc + qtt
	qtt = qtt - qtv
	ano = ano + 1
if(soma < 0):
		print("EXTINCAO")
if(soma > 12000):
		print("LIMITE")
print(ano)
-- ERROR:
File "XXXX", line 13
    if(soma < 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:48:19) 
-- CODE:
qtt = int(input("Quantidade de tambaqui:"))
pc = int(input("Percentual de crescimento:"))/100
qtv = int(input("Quantidade de tambaqui retirados para venda:"))

ano = 0
soma = 0

while(qtt > 0 and qtt < 12000):
	qtt = qtt*pc + qtt
	qtt = qtt - qtv
	ano = ano + 1
if(soma < 0):
		print("EXTINCAO")
if(soma > 12000):
		print("LIMITE")
print(ano)
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:48:35) 
-- CODE:
qtt = int(input("Quantidade de tambaqui:"))
pc = int(input("Percentual de crescimento:"))/100
qtv = int(input("Quantidade de tambaqui retirados para venda:"))

ano = 0
soma = 0

while(qtt > 0 and qtt < 12000):
	qtt = qtt*pc + qtt
	qtt = qtt - qtv
	ano = ano + 1
if(soma < 0):
	print("EXTINCAO")
if(soma > 12000):
	print("LIMITE")
print(ano)
-- EXECUTION TIME:
0.189777
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:48:36) 
-- CODE:
qtt = int(input("Quantidade de tambaqui:"))
pc = int(input("Percentual de crescimento:"))/100
qtv = int(input("Quantidade de tambaqui retirados para venda:"))

ano = 0
soma = 0

while(qtt > 0 and qtt < 12000):
	qtt = qtt*pc + qtt
	qtt = qtt - qtv
	ano = ano + 1
if(soma < 0):
	print("EXTINCAO")
if(soma > 12000):
	print("LIMITE")
print(ano)
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:48:56) 
-- CODE:
qtt = int(input("Quantidade de tambaqui:"))
pc = int(input("Percentual de crescimento:"))/100
qtv = int(input("Quantidade de tambaqui retirados para venda:"))

ano = 0
soma = 0

while(qtt > 0 and qtt < 12000):
	qtt = qtt*pc + qtt
	qtt = qtt - qtv
	ano = ano + 1
if(soma < 0):
	print("EXTINCAO")
elif(soma > 12000):
	print("LIMITE")
print(ano)
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:49:08) 
-- CODE:
qtt = int(input("Quantidade de tambaqui:"))
pc = int(input("Percentual de crescimento:"))/100
qtv = int(input("Quantidade de tambaqui retirados para venda:"))

ano = 0
soma = 0

while(qtt > 0 and qtt < 12000):
	qtt = qtt*pc + qtt
	qtt = qtt - qtv
	ano = ano + 1
if(soma < 0):
	print("EXTINCAO")
elif(soma >= 12000):
	print("LIMITE")
print(ano)
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:49:31) 
-- CODE:
qtt = int(input("Quantidade de tambaqui:"))
pc = int(input("Percentual de crescimento:"))/100
qtv = int(input("Quantidade de tambaqui retirados para venda:"))

ano = 0

while(qtt > 0 and qtt < 12000):
	qtt = qtt*pc + qtt
	qtt = qtt - qtv
	ano = ano + 1
if(qtt < 0):
	print("EXTINCAO")
elif(qtt >= 12000):
	print("LIMITE")
print(ano)
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:49:37) 
-- CODE:
qtt = int(input("Quantidade de tambaqui:"))
pc = int(input("Percentual de crescimento:"))/100
qtv = int(input("Quantidade de tambaqui retirados para venda:"))

ano = 0

while(qtt > 0 and qtt < 12000):
	qtt = qtt*pc + qtt
	qtt = qtt - qtv
	ano = ano + 1
if(qtt < 0):
	print("EXTINCAO")
elif(qtt >= 12000):
	print("LIMITE")
print(ano)
-- EXECUTION TIME:
0.174499
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
